--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,5 +22,9 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "bootstrap": "^4.5.3"
   }
 }
